--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,22 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     11\u001b[0m           \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mToo high\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 12\u001b[0m guessing_game()\n",
-      "Cell \u001b[1;32mIn[2], line 4\u001b[0m, in \u001b[0;36mguessing_game\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m number \u001b[39m=\u001b[39m randint(\u001b[39m0\u001b[39m, \u001b[39m100\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m trial \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m3\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     guess \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mInsert your guess: \u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m      5\u001b[0m     \u001b[39mif\u001b[39;00m guess \u001b[39m==\u001b[39m number:\n\u001b[0;32m      6\u001b[0m       \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mJust right\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def guessing_game():\n",
     "    number = randint(0, 100)\n",
@@ -126,20 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mysum(*numbers):\n",
     "    sum = 0\n",
@@ -152,27 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4, 1, 2, 5, 6)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3.6"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def average(*numbers):\n",
     "    print(numbers)\n",
@@ -194,20 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sum(iterable, seed: int = 0):\n",
     "    summation = seed\n",
@@ -226,20 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def avg(numbers):\n",
     "    num_items = len(numbers)\n",
@@ -257,20 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 7, 18)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def shortest(names):\n",
     "    short = len(names[0])\n",
@@ -309,21 +234,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['vincent', 'isaac']"
+       "14"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def sum_objs(objects):\n",
+    "    '''This is my function.\n",
+    "       This is the second line\n",
+    "    '''\n",
+    "    sum = 0\n",
+    "    for obj in objects:\n",
+    "        try:\n",
+    "         if isinstance(obj, int):\n",
+    "            sum = sum + obj\n",
+    "         else:\n",
+    "            sum = sum + int(obj)\n",
+    "        except:\n",
+    "           continue\n",
+    "    return sum\n",
+    "\n",
+    "sum_objs([True, False, '5', 'Vanessa', 'Kasozi', 8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function (run_timing) that asks how long it took for you to run 10 km. The function continues to ask how long (in minutes) it took for additional runs, until the user presses Enter. At that point, the function exits—but only after calculating and displaying the average time that the 10 km runs took."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def run_timing():\n",
+    "    days = 0\n",
+    "    sum = 0\n",
+    "    while True:\n",
+    "        response = input('Insert the time for 10km in seconds: ')\n",
+    "        if response == '':\n",
+    "            break\n",
+    "        sum = sum + float(response)\n",
+    "        days = days + 1        \n",
+    "    return sum / days    \n",
+    "run_timing()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that takes a float and two integers (before and after). The function should return a float consisting of before digits before the decimal point and after digits after. Thus, if we call the function with 1234.5678, 2 and\n",
+    "3, the return value should be 34.567."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.567"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def format(number: float, before, after):\n",
+    "    string = str(number)\n",
+    "    left, right = string.split('.')\n",
+    "    new_left = left[-before:]\n",
+    "    new_right = right[:after]\n",
+    "    return float(f'{new_left}.{new_right}')\n",
+    "\n",
+    "format(1234.5678, 1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "a\n",
+      "Va\n",
+      "Vanes\n",
+      "sa\n",
+      "nessa\n",
+      "34\n",
+      "567\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Vanessa'\n",
+    "# get one item from the string\n",
+    "print(name[4])\n",
+    "\n",
+    "# get the last letter in the string\n",
+    "print(name[-1])\n",
+    "\n",
+    "#get the first 2 letters\n",
+    "print(name[:2])\n",
+    "\n",
+    "#get the first 5 letters\n",
+    "print(name[:5])\n",
+    "\n",
+    "#get the last two letters\n",
+    "print(name[-2:])\n",
+    "\n",
+    "# get the last 5 letters\n",
+    "print(name[-5:])\n",
+    "\n",
+    "s = '1234'\n",
+    "print(s[-2:])\n",
+    "\n",
+    "t = '5678'\n",
+    "print(t[0:3])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explore the Decimal class (http://mng.bz/oPVr), which has an alternative floating-point representation that’s as accurate as any decimal number can be. Write a function that takes two strings from the user, turns them into decimal\n",
+    "instances, and then prints the floating-point sum of the user’s two inputs. In other words, make it possible for the user to enter 0.1 and 0.2, and for us to get 0.3 back."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from decimal import Decimal\n",
+    "\n",
+    "def solution():\n",
+    "    first = Decimal(input('Insert the first string: '))\n",
+    "    second = Decimal(input('Insert the second string: '))\n",
+    "    return float(first + second)\n",
+    "solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.30000000000000004"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1 + 0.2"
+   ]
   },
   {
    "cell_type": "code",
