--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -422,30 +422,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert10(input, base):\n",
+    "  decnum = 0\n",
+    "  for power, digit in enumerate(reversed(input)): \n",
+    "     decnum += int(digit, base) * (base ** power) \n",
+    "  return decnum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reimplement the solution for this exercise such that it doesn’t use the int function at all, but rather uses the built-in ord and chr functions to identify the character. This implementation should be more robust, ignoring characters that aren’t legal for the entered number base."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.30000000000000004"
+       "74"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program that asks the user for their name and then produces a “name triangle”: the first letter of their name, then the first two letters, then the first three, and so forth, until the entire name is written on the final line. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V\n",
+      "Va\n",
+      "Van\n",
+      "Vane\n",
+      "Vanes\n",
+      "Vaness\n",
+      "Vanessa\n"
+     ]
+    }
+   ],
+   "source": [
+    "def name_triangle(name):\n",
+    "    for (idx, _) in enumerate(name):\n",
+    "        print(name[0: idx + 1])\n",
+    "name_triangle('Vanessa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Van"
+     ]
+    }
+   ],
+   "source": [
+    "def slice(name, lower, upper):\n",
+    "    while lower < upper:\n",
+    "        print(name[lower], end='')\n",
+    "        lower = lower + 1\n",
+    "slice('Vanessa', 0, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kasozi', 'vincent']\n",
+      "['kasozi', 'Vanessa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "'kasozi' in ['kasozi', 'vincent']\n",
+    "'k' in 'kasozi'\n",
+    "2 in {1, 5, 6}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pig Latin (http://mng.bz/YrON) is a common children’s “secret” language in English speaking countries. (It’s normally secret among children who forget that their parents\n",
+    "were once children themselves.) The rules for translating words from English into Pig\n",
+    "Latin are quite simple:\n",
+    "- If the word begins with a vowel (a, e, i, o, or u), add “way” to the end of the\n",
+    "word. So “air” becomes “airway” and “eat” becomes \"eatway.\"\n",
+    "- If the word begins with any other letter, then we take the first letter, put it on\n",
+    "the end of the word, and then add \"ay.\" Thus, “python” becomes “ythonpay”\n",
+    "and “computer” becomes “omputercay.”\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'airway'"
+      ]
+     },
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "0.1 + 0.2"
+    "def is_vowel(letter):\n",
+    "    return letter in 'aeiouAIEOU'\n",
+    "\n",
+    "def pig_latin(word: str) -> str:\n",
+    "    if is_vowel(word[0]):\n",
+    "        return f'{word}way'\n",
+    "    else:\n",
+    "        return f'{word[1:]}{word[0]}ay'\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Handle capitalized words—If a word is capitalized (i.e., the first letter is capitalized, but the rest of the word isn’t), then the Pig Latin translation should be similarly capitalized."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Asozikay'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pig_latin_caps(word: str) -> str:\n",
+    "    if word[0].islower():\n",
+    "        return pig_latin(word)\n",
+    "    else:\n",
+    "        return pig_latin(word).capitalize()\n",
+    "pig_latin_caps('Kasozi')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Handle punctuation—If a word ends with punctuation, then that punctuation should be shifted to the end of the translated word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import string\n",
+    "def pig_latin_pun(word: str) -> str:\n",
+    "    if word[-1] in string.punctuation:\n",
+    "        pass\n",
+    "    else:\n",
+    "        return pig_latin_caps(word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "s.append(9)\n",
+    "s"
+   ]
   }
  ],
  "metadata": {
