--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -177,7 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def avg(numbers):\n",
+    "from typing import List\n",
+    "def avg(numbers: List[int]):\n",
     "    num_items = len(numbers)\n",
     "    total = sum(numbers)\n",
     "    return total / num_items\n",
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,23 +1083,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[(1, 'a', 'oh'), (2, 'b', 'eh')]"
+       "[(1, 'a', 7), (2, 'b', 5)]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,12 +1101,11 @@
     "def my_zip(*iterables):\n",
     "    result = []\n",
     "    smallest = min([len(iterable) for iterable in iterables])\n",
-    "    print(smallest)\n",
-    "    for item in range(smallest):\n",
-    "        result.append(tuple([iterable[item] for iterable in iterables]))\n",
+    "    for index in range(smallest):\n",
+    "        result.append(tuple([iterable[index] for iterable in iterables]))\n",
     "    return result\n",
-    "my_zip([1, 2, 5], ['a', 'b', 'c'], ['oh', 'eh'])\n",
-    "    "
+    "    \n",
+    "my_zip([1, 2, 5], 'abcd', (7, 5))"
    ]
   },
   {
@@ -1125,10 +1118,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔥🔥🔥🔥🔥🔥🔥\n",
+      "🔥🔥🔥🔥🔥🔥🔥\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum_numeric(*elements):\n",
+    "    total = 0\n",
+    "    for element in elements:\n",
+    "        try:\n",
+    "           if isinstance(element, int):\n",
+    "              total = total + element\n",
+    "           else:\n",
+    "              total = total + int(element)\n",
+    "        except:\n",
+    "           print('🔥🔥🔥🔥🔥🔥🔥')\n",
+    "           continue\n",
+    "    return total\n",
+    "\n",
+    "sum_numeric(2, 6, 5, '8', 'kasozi', 0, '7g')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1142,6 +1169,170 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This challenge asks you to redefine the mysum function we defined in chapter 1, such that it can take any number of arguments. The arguments must all be of the same type and know how to respond to the + operator. (Thus, the function should work with numbers, strings, lists, and tuples, but not with sets and dicts.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 8, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def my_sum(*args):\n",
+    "    result = args[0]\n",
+    "    for arg in args[1:]:\n",
+    "        result = result + arg\n",
+    "    return result\n",
+    "my_sum([1, 2, 8, 5], [6, 7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function, mysum_bigger_than, that works the same as mysum, except that it takes a first argument that precedes *args. That argument indicates the threshold for including an argument in the sum. Thus, calling mysum_bigger\n",
+    "_than(10, 5, 20, 30, 6) would return 50—because 5 and 6 aren’t greater than 10. This function should similarly work with any type and assumes that all of the arguments are of the same type. Note that > and < work on many different types in Python, not just on numbers; with strings, lists, and tuples, it refers to their sort order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a sequence of positive and negative numbers, sort them by absolute value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, -4, 8, -100]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sort_by_abs(seq):\n",
+    "    return sorted(seq, key=abs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a list of strings, sort them according to how many vowels they contain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vincent', 'kasozi', 'vanessa', 'adrian']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_vowels(word):\n",
+    "    return sum([1 for letter in word if is_vowel(letter)])\n",
+    "\n",
+    "def count_as(word):\n",
+    "    return sum([1 for letter in word if letter == 'a'])\n",
+    "\n",
+    "names = ['kasozi', 'vincent', 'vanessa', 'adrian']\n",
+    "sorted(names, key=count_as)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a list of lists, with each list containing zero or more numbers, sort by the sum of each inner list’s numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 5], [9], [5, 6, 4]]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted([[1, 5], [5, 6, 4], [9]], key=sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function, most_repeating_word, that takes a sequence of strings as input. The function should return the string that contains the greatest number of repeated letters. In other words\n",
+    "- For each word, find the letter that appears the most times.\n",
+    "- Find the word whose most-repeated letter appears more than any other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of finding the word with the greatest number of repeated letters, find the word with the greatest number of repeated vowels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
